backend/microservices: - Architectural change - A separate database for all microservices - Transition to gRPC
