# services/auth/internal/models/db/user.go
@@ -1,0 +1,12 @@
+package db
+
+import "time"
+
+type User struct {
+	ID        int64     `db:"id"`
+	Username  string    `db:"username"`
+	Email     string    `db:"email"`
+	Password  string    `db:"password"`
+	CreatedAt time.Time `db:"created_at"`
+	UpdatedAt time.Time `db:"updated_at"`
+}
